examples/negative/modules/missing_import_no_use.kai
# Negative fixture (#538 shape 3 / modules): the same shape as
# `missing_import.kai` but with no downstream reference to any
# name from the missing module. Pre-#538 the loader emitted
# `cannot open module ...` to stderr and exited 0 because nothing
# else failed. The resolver now bumps an error counter on every
# import-resolution failure, so compilation aborts with non-zero
# even when the source body would otherwise type-check.

import nothing_here_no_use

fn main() : Int = 0
